[tool.poetry]
name = "nonebot-plugin-fun-content"
version = "0.3.2"
description = "从本地数据库或在线API获取趣味内容，如一言、土味情话、舔狗日记等。可以分群开关功能，支持定时任务。"
authors = ["Endless-Path <rk.chensiyu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"
nonebot2 = "^2.2.1"
nonebot-adapter-onebot = "^2.4.1"
pydantic = "^1.10.13"
nonebot-plugin-apscheduler = "^0.4.0"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"